@@ -1,0 +1,2 @@
+prog: bug411369
+vgopts: -q
